# bob-the-bot

./: .env.example  .gitignore  README.md  flake.nix  pyproject.toml
bob_the_fish/: bot.py  process.py  scrape.py
